Fix dark mode text color

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,6 +19,14 @@ html.dark svg {
   color: white;
 }
 
+html.dark button.clear {
+  color: white;
+}
+
+html.dark button.back-button {
+  color: white;
+}
+
 #nprogress {
   pointer-events: none;
 }
